--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -347,7 +347,7 @@ ol {
 
 .header__top__right__auth a {
 	display: block;
-	font-size: 20px;
+	font-size: 14px;
 	color: #1c1c1c;
 }
 
@@ -357,6 +357,8 @@ ol {
 
 .container-menu {
 	padding: 0px 30px 0px 30px;
+	display: flex;
+	
 }
 
 .header__logo {
@@ -673,10 +675,35 @@ ol {
 }
 
 .hero__item {
-	height: 431px;
+		
 	display: flex;
 	align-items: center;
-	padding-left: 75px;
+	background: #6f6f6f;
+	
+}
+
+.hero__item > div {
+	width: 100%;
+	height: 100%;
+	height: 431px;
+}
+
+
+.hero__item .carousel-inner
+, .hero__item .carousel-item 
+{
+	height: 100%;
+}
+
+.hero__text {
+	width: 100%;
+	height: 100%;
+	padding-left: 120px;
+	padding-top: 80px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	
 }
 
 .hero__text span {
@@ -792,11 +819,19 @@ ol {
 	bottom: 20px;
 }
 .featured__item__pic {
-	height: 270px;
+	height: 350px;
 	position: relative;
 	overflow: hidden;
 	background-position: center center;
 }
+.featured__item__pic > img{
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	border-radius: 8px;
+	overflow: hidden;
+}
+
 .featured__item__pic__hover {
 	position: absolute;
 	left: 0;
@@ -857,7 +892,8 @@ ol {
 	padding-top: 15px;
 }
 .featured__item__text h6 {
-	margin-bottom: 10px;
+	margin-bottom: 8px;
+	font-size: 18px;
 }
 
 .featured__item__text h6 a {
@@ -868,6 +904,7 @@ ol {
 .featured__item__text h5 {
 	color: #252525;
 	font-weight: 700;
+	font-size: 20px;
 }
 /*---------------------
   Form BLog
@@ -1005,7 +1042,7 @@ ol {
 
 @media only screen and (min-width: 1200px) {
 	.container {
-		max-width: 1170px;
+		max-width: 1440px;
 	}
 }
 /* Medium Device = 1200px */
@@ -1102,4 +1139,20 @@ ol {
 	.blog__details__hero__text h2 {
 		font-size: 24px;
 	}
+}
+
+.blog__item__pic {
+	height: 400px;
+	width: 100%;
+}
+
+.blog__item__pic > img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.blog__item__text {
+	font-size: 24px;
+	padding: 24px 0px;
 }
