--- a/web/static/css/viewCart.css
+++ b/web/static/css/viewCart.css
@@ -1,101 +1,100 @@
-body{margin-top:20px;}
 select.form-control:not([size]):not([multiple]) {
-    height: 44px;
+  height: 44px;
 }
 select.form-control {
-    padding-right: 38px;
-    background-position: center right 17px;
-    background-image: url(data:image/svg+xml;utf8;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iaXNv…9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8L3N2Zz4K);
-    background-repeat: no-repeat;
-    background-size: 9px 9px;
+  padding-right: 38px;
+  background-position: center right 17px;
+  background-image: url(data:image/svg+xml;utf8;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iaXNv…9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8Zz4KPC9nPgo8L3N2Zz4K);
+  background-repeat: no-repeat;
+  background-size: 9px 9px;
 }
 .form-control:not(textarea) {
-    height: 44px;
+  height: 44px;
 }
 .form-control {
-    padding: 0 18px 3px;
-    border: 1px solid #dbe2e8;
-    border-radius: 22px;
-    background-color: #fff;
-    color: #606975;
-    font-family: "Maven Pro",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+  padding: 0 18px 3px;
+  border: 1px solid #dbe2e8;
+  border-radius: 22px;
+  background-color: #fff;
+  color: #606975;
+  font-family: "Maven Pro", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-h2{
-    padding: 20px 0;
+h2 {
+  padding: 20px 0;
 }
 
 .shopping-cart,
 .wishlist-table,
 .order-table {
-    margin-bottom: 20px
+  margin-bottom: 20px;
 }
 
 .shopping-cart .table,
 .wishlist-table .table,
 .order-table .table {
-    margin-bottom: 0
+  margin-bottom: 0;
 }
 
 .shopping-cart .btn,
 .wishlist-table .btn,
 .order-table .btn {
-    margin: 0;
+  margin: 0;
 }
 
-.shopping-cart>table>thead>tr>th,
-.shopping-cart>table>thead>tr>td,
-.shopping-cart>table>tbody>tr>th,
-.shopping-cart>table>tbody>tr>td,
-.wishlist-table>table>thead>tr>th,
-.wishlist-table>table>thead>tr>td,
-.wishlist-table>table>tbody>tr>th,
-.wishlist-table>table>tbody>tr>td,
-.order-table>table>thead>tr>th,
-.order-table>table>thead>tr>td,
-.order-table>table>tbody>tr>th,
-.order-table>table>tbody>tr>td {
-    vertical-align: middle !important
+.shopping-cart > table > thead > tr > th,
+.shopping-cart > table > thead > tr > td,
+.shopping-cart > table > tbody > tr > th,
+.shopping-cart > table > tbody > tr > td,
+.wishlist-table > table > thead > tr > th,
+.wishlist-table > table > thead > tr > td,
+.wishlist-table > table > tbody > tr > th,
+.wishlist-table > table > tbody > tr > td,
+.order-table > table > thead > tr > th,
+.order-table > table > thead > tr > td,
+.order-table > table > tbody > tr > th,
+.order-table > table > tbody > tr > td {
+  vertical-align: middle !important;
 }
 
-.shopping-cart>table thead th,
-.wishlist-table>table thead th,
-.order-table>table thead th {
-    padding-top: 17px;
-    padding-bottom: 17px;
-    border-width: 1px
+.shopping-cart > table thead th,
+.wishlist-table > table thead th,
+.order-table > table thead th {
+  padding-top: 17px;
+  padding-bottom: 17px;
+  border-width: 1px;
 }
 
 .shopping-cart .remove-from-cart,
 .wishlist-table .remove-from-cart,
 .order-table .remove-from-cart {
-    display: inline-block;
-    color: #ff5252;
-    font-size: 18px;
-    line-height: 1;
-    text-decoration: none
+  display: inline-block;
+  color: #ff5252;
+  font-size: 18px;
+  line-height: 1;
+  text-decoration: none;
 }
 
 .shopping-cart .count-input,
 .wishlist-table .count-input,
 .order-table .count-input {
-    display: inline-block;
-    width: 100%;
-    width: 86px
+  display: inline-block;
+  width: 100%;
+  width: 86px;
 }
 
 .shopping-cart .product-item,
 .wishlist-table .product-item,
 .order-table .product-item {
-    display: table;
-    width: 100%;
-    min-width: 150px;
-    margin-top: 5px;
-    margin-bottom: 3px
+  display: table;
+  width: 100%;
+  min-width: 150px;
+  margin-top: 5px;
+  margin-bottom: 3px;
 }
 
 .shopping-cart .product-item .product-thumb,
@@ -104,168 +103,203 @@ h2{
 .wishlist-table .product-item .product-info,
 .order-table .product-item .product-thumb,
 .order-table .product-item .product-info {
-    display: table-cell;
-    vertical-align: top
+  display: table-cell;
+  vertical-align: top;
 }
 
 .shopping-cart .product-item .product-thumb,
 .wishlist-table .product-item .product-thumb,
 .order-table .product-item .product-thumb {
-    width: 130px;
-    padding-right: 20px
+  width: 130px;
+  padding-right: 20px;
 }
 
-.shopping-cart .product-item .product-thumb>img,
-.wishlist-table .product-item .product-thumb>img,
-.order-table .product-item .product-thumb>img {
-    display: block;
-    width: 100%;
-    height: 50%;
+.shopping-cart .product-item .product-thumb > img,
+.wishlist-table .product-item .product-thumb > img,
+.order-table .product-item .product-thumb > img {
+  display: block;
+  width: 100%;
+  height: 50%;
 }
 
 @media screen and (max-width: 860px) {
-    .shopping-cart .product-item .product-thumb,
-    .wishlist-table .product-item .product-thumb,
-    .order-table .product-item .product-thumb {
-        display: none
-    }
+  .shopping-cart .product-item .product-thumb,
+  .wishlist-table .product-item .product-thumb,
+  .order-table .product-item .product-thumb {
+    display: none;
+  }
 }
 
 .shopping-cart .product-item .product-info span,
 .wishlist-table .product-item .product-info span,
 .order-table .product-item .product-info span {
-    display: block;
-    font-size: 13px
+  display: block;
+  font-size: 13px;
 }
 
-.shopping-cart .product-item .product-info span>em,
-.wishlist-table .product-item .product-info span>em,
-.order-table .product-item .product-info span>em {
-    font-weight: 500;
-    font-style: normal
+.shopping-cart .product-item .product-info span > em,
+.wishlist-table .product-item .product-info span > em,
+.order-table .product-item .product-info span > em {
+  font-weight: 500;
+  font-style: normal;
 }
 
 .shopping-cart .product-item .product-title,
 .wishlist-table .product-item .product-title,
 .order-table .product-item .product-title {
-    margin-bottom: 6px;
-    padding-top: 5px;
-    font-size: 16px;
-    font-weight: 500
+  margin-bottom: 6px;
+  padding-top: 5px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
-.shopping-cart .product-item .product-title>a,
-.wishlist-table .product-item .product-title>a,
-.order-table .product-item .product-title>a {
-    transition: color .3s;
-    color: #374250;
-    line-height: 1.5;
-    text-decoration: none
+.shopping-cart .product-item .product-title > a,
+.wishlist-table .product-item .product-title > a,
+.order-table .product-item .product-title > a {
+  transition: color 0.3s;
+  color: #374250;
+  line-height: 1.5;
+  text-decoration: none;
 }
 
-.shopping-cart .product-item .product-title>a:hover,
-.wishlist-table .product-item .product-title>a:hover,
-.order-table .product-item .product-title>a:hover {
-    color: #0da9ef
+.shopping-cart .product-item .product-title > a:hover,
+.wishlist-table .product-item .product-title > a:hover,
+.order-table .product-item .product-title > a:hover {
+  color: #0da9ef;
 }
 
 .shopping-cart .product-item .product-title small,
 .wishlist-table .product-item .product-title small,
 .order-table .product-item .product-title small {
-    display: inline;
-    margin-left: 6px;
-    font-weight: 500
+  display: inline;
+  margin-left: 6px;
+  font-weight: 500;
 }
 
 .wishlist-table .product-item .product-thumb {
-    display: table-cell !important
+  display: table-cell !important;
 }
 
 @media screen and (max-width: 576px) {
-    .wishlist-table .product-item .product-thumb {
-        display: none !important
-    }
+  .wishlist-table .product-item .product-thumb {
+    display: none !important;
+  }
 }
 
 .shopping-cart-footer {
-    display: table;
-    width: 100%;
-    padding: 10px 0;
-    border-top: 1px solid #e1e7ec
+  display: table;
+  width: 100%;
+  padding: 10px 0;
+  border-top: 1px solid #e1e7ec;
 }
 
-.shopping-cart-footer>.column {
-    display: table-cell;
-    padding: 5px 0;
-    vertical-align: middle
+.shopping-cart-footer > .column {
+  display: table-cell;
+  padding: 5px 0;
+  vertical-align: middle;
 }
 
-.shopping-cart-footer .btn{
-    border-radius: 20px;
+.shopping-cart-footer .btn {
+  border-radius: 20px;
 }
 
-.shopping-cart-footer>.column:last-child {
-    text-align: right
+.shopping-cart-footer > .column:last-child {
+  text-align: right;
 }
 
-.shopping-cart-footer>.column:last-child .btn {
-    margin-right: 0;
-    margin-left: 15px;
-    padding: 8px 10px;
+.shopping-cart-footer > .column:last-child .btn {
+  margin-right: 0;
+  margin-left: 15px;
+  padding: 8px 10px;
 }
 
-.shopping-cart-footer>.column:first-child .btn {
-    margin-right: 0;
-    margin-left: 15px;
-    padding: 8px 10px;
+.shopping-cart-footer > .column:first-child .btn {
+  margin-right: 0;
+  margin-left: 15px;
+  padding: 8px 10px;
 }
-
-
 
 @media (max-width: 768px) {
-    .shopping-cart-footer>.column {
-        display: block;
-        width: 100%
-    }
-    .shopping-cart-footer>.column:last-child {
-        text-align: center
-    }
-    .shopping-cart-footer>.column .btn {
-        width: 100%;
-        margin: 12px 0 !important
-    }
+  .shopping-cart-footer > .column {
+    display: block;
+    width: 100%;
+  }
+  .shopping-cart-footer > .column:last-child {
+    text-align: center;
+  }
+  .shopping-cart-footer > .column .btn {
+    width: 100%;
+    margin: 12px 0 !important;
+  }
 }
 
 .coupon-form .form-control {
-    display: inline-block;
-    width: 100%;
-    max-width: 235px;
-    margin-right: 12px;
+  display: inline-block;
+  width: 100%;
+  max-width: 235px;
+  margin-right: 12px;
 }
 
 .form-control-sm:not(textarea) {
-    height: 36px;
+  height: 36px;
 }
 
-
 .btn-action {
-    width: 200px;
-    border-radius: 6px !important;
+  width: 200px;
+  border-radius: 6px !important;
 }
 
 .cart__bottom {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 
-    gap: 20px;
+  gap: 20px;
 }
 
 .cart__total {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .cart__price__total {
-    color: #fc5959;
-    font-weight: bold;
+  color: #fc5959;
+  font-weight: bold;
+}
+
+.detail-quantity {
+  display: flex;
+  align-items: center;
+  width: 170px;
+}
+
+.detail-quantity input {
+  padding: 0px 20px 0 35px;
+  height: 40px;
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+  border: 1px solid #ccc;
+  background: #fff;
+  border-radius: 0;
+}
+
+.detail-quantity button {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  background: #fff;
+}
+
+.detail-quantity-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cart__container {
+  min-height: calc(100vh - 564px);
 }
