--- a/web/static/css/orderRequest.css
+++ b/web/static/css/orderRequest.css
@@ -1,131 +1,160 @@
-.main{
-    background: #f5f5f5;
-    font-family: 'Arial', sans-serif;
-    padding: 50px;
+.main {
+  background: white;
+  font-family: "Arial", sans-serif;
+  padding: 50px;
 }
-.title-main{
-    padding-bottom: 20px;
+.title-main {
+  text-align: center;
+}
+
+.sm-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.title-main h3 {
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .add-material {
-    border: 1px solid white;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    padding: 30px 40px;
-    margin-right: 20px;
-    margin-top: 50px;
+  background: #f5f5f5;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.form-title {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #25241e;
+  font-weight: bold;
+  margin-bottom: 16px;
 }
 
 /* Chọn loại lồng */
-.selectcage{
-    display: flex;
-    align-items: center;
-    padding: 10px 0px;
+.selectcage {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
-.selectcage select{
-    border-radius: 20px;
-    width: 300px;
-    margin-left: 10px;
+.selectcage select {
+  width: 100%;
+  border-radius: 0;
 }
 /* SỐ LƯỢNG LỒNG CẦN THIẾT KẾ */
-.quantitycage{
-    display: flex;
-    padding-bottom: 10px;
-    align-items: center;
-    border-bottom: 1px solid gray;
-
+.quantitycage {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
 }
 
-.quantitycage input{
-    width: 50px;
-    border-radius: 20px;
-    margin-left: 10px;
+.quantitycage input {
+  width: 50px;
+  border-radius: 20px;
 }
 
-.titlemat h5{
-    font-weight: bold;
-    padding-top: 20px;
-    padding-bottom: 10px; 
-
+.titlemat h5 {
+  font-weight: bold;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 /* CHỌN NGUYÊN LIỆU */
-.selectmate{
-    display: flex;
-    align-items: center;
+.selectmate {
+  display: flex;
+  flex-direction: column;
 }
-.selectmate select{
-    border-radius: 20px;
-    width: 300px;
-    margin-left: 10px;
-}
-
-.materialSuggestion ul{
-    margin-left: 50px;
+.selectmate select {
+  width: 100%;
+  border-radius: 0;
 }
 
 /* Số lượng material */
-.quantitymate{
-    display: flex;
-    align-items: center;   
+.quantitymate {
+  display: flex;
+
+  flex-direction: column;
 }
-.quantitymate input{
-    width: 50px;
-    border-radius: 20px;
-    margin-left: 10px;
-}
+
 /* button-addmate */
-.button-addmate{
-    text-align: center;
-    padding: 15px;
-}
-.button-addmate button{
-    width: 35%;
-    border-radius: 20px;
-    padding: 10px;
+.button-addmate button {
+  border-radius: 0;
 }
 
-.mat-tab-title h5{
-    font-weight: bold;
-    padding-bottom: 10px; 
+.mat-tab-title h5 {
+  font-weight: bold;
+  padding-bottom: 10px;
 }
-.mat-tab thead{
-    background-color: #f5f5f5
-}
-
-.note textarea{
-    margin: 10px 0px;
-}
-.checkout{
-    padding-top: 10px;
+.mat-tab thead {
+  background-color: #f5f5f5;
 }
 
-.checkout p{
-    color: black;
+.note textarea {
+  margin: 10px 0px;
+}
+.checkout {
+  padding-top: 10px;
 }
 
+.checkout p {
+  color: black;
+}
 
-.money{
-    font-weight: bold;
+.money {
+  font-weight: bold;
 }
 .sendrequest {
-    text-align: center; 
 }
 
-.sendrequest button{
-    width: 30%;
-    border-radius: 20px;
-    padding: 10px;
-    
+.sendrequest button {
+  border-radius: 0;
 }
-  
+
 .material {
-    border: 1px solid white;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    padding: 30px 40px;
-    margin-left: 20px; /* Khoảng cách 20px về bên trái */
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  padding: 20px;
 }
 
+.detail-quantity {
+  display: flex;
+  align-items: center;
+  width: 170px;
+}
 
+.detail-quantity input {
+  padding: 0px 20px 0 35px;
+  height: 40px;
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+  border: 1px solid #ccc;
+  background: #fff;
+  border-radius: 0;
+}
+
+.detail-quantity button {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  background: #fff;
+}
+
+#suggestedMaterials {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 8px;
+  list-style: none;
+  padding: 0;
+}
+
+.checkout-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
