--- a/web/static/css/checkout.css
+++ b/web/static/css/checkout.css
@@ -1,158 +1,285 @@
 /* Apply some basic styling to the body */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
 }
 
 /* Style the header */
 .title {
-
-    color: black;
-    padding-top: 20px;
-}
-
-.title1{
-    padding: 10px 0px;
-    font-weight: bold;
-    font-family: 'Roboto';
+  color: black;
+  padding-top: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 /* Style the container for the form and summary */
 .container-fluid {
-    margin: 10px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
+  margin: 10px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
 }
 
-.information{
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+.information {
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 
-    padding: 5px 200px 40px 200px;
-    background-color: #F8F7F5;
+  padding: 5px 200px 40px 200px;
+  background-color: #f8f7f5;
 }
 
 .infor-user {
-    display: grid;
-    grid-template-columns: 150px 1fr;
-    gap: 16px;
- 
-}
-
-.infor-user,
-.ship,
-.check-out {
-    margin: 20px; /* Điều chỉnh khoảng cách theo ý muốn */
-    padding: 10px; /* Điều chỉnh khoảng cách nội dung bên trong */
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  gap: 16px;
 }
 
 .ship,
 .check-out {
-    border: none;
-    border-top: 1px solid #686868; 
+  border: none;
+  border-top: 1px solid #686868;
 }
 
 .infor-user label,
-.ship select,
-label{
-    margin-left: 10px;
+.ship select {
+  margin-left: 10px;
 }
 
-/* Style the form elements */
-label {
-    font-weight: bold;
+#shippingMethod {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
 }
 
-#shippingMethod{
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
+.summary {
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  padding: 5px 200px 40px 200px;
+}
+.ordersp,
+.tabtotal {
+  margin: 15px;
+  padding: 10px;
+}
+.tabtotal {
+  border: none;
+  border-top: 1px solid #686868;
+}
+.but-check {
 }
 
-.form__container {
-    gap: 24px;
+.but-check button {
+  border-radius: 0;
+  width: 100%;
 }
 
-.summary{
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    padding: 5px 200px 40px 200px;
+.table-container,
+.but-check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.ordersp, 
-.tabtotal{
-    margin: 15px; 
-    padding: 10px;  
-}
-.tabtotal           {
-    border: none;
-    border-top: 1px solid #686868; 
-}
-.but-check{
-    margin: 15px; 
-    padding: 10px; 
-    
-}
-
-.table-container, .but-check {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 /* Style the summary table */
 table {
-    margin-top: 10px;
-    width: 90%;
-    border-collapse: collapse;
+  margin-top: 10px;
+  width: 90%;
+  border-collapse: collapse;
 }
 
-table, th, td {
-    border: 1px solid black;
-    
+table,
+th,
+td {
+  border: 1px solid black;
 }
 
-th{
-    background-color: rgb(182, 182, 182);
+th {
+  background-color: rgb(182, 182, 182);
 }
-th, td {
-    padding: 10px;
-    text-align: left;
+th,
+td {
+  padding: 10px;
+  text-align: left;
 }
 
 .bold-left {
-    display: flex;
-    justify-content: space-between;
-    font-weight: bold; /* Để in đậm phần bên trái */
-  }
-  
-  span {
-    font-weight: normal; /* Để không in đậm phần bên phải */
-  }
+  display: flex;
+  justify-content: space-between;
+}
 
 /* Style the "Tổng đơn hàng" section */
 h5 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 /* Style the "Thanh toán" button */
 .custom-button {
-    width: 40%;
-    border-radius: 10px;
-    color: #fff;
-    padding: 30px 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 20px;
-    text-align: center;
+  width: 40%;
+  border-radius: 10px;
+  color: #fff;
+  padding: 30px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 20px;
+  text-align: center;
 }
 
 /* Media query for responsiveness */
 @media screen and (max-width: 768px) {
-    .container-fluid {
-        margin: 10px;
-    }
+  .container-fluid {
+    margin: 10px;
+  }
+}
+
+.sm-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.add-material {
+  background: #f5f5f5;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.title1 {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #25241e;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  margin-bottom: 16px;
+}
+
+.form-container label {
+  margin-bottom: 0 !important;
+}
+
+.form-container input {
+  border-radius: 0;
+}
+
+.material {
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  padding: 20px 40px;
+}
+
+.material-list {
+  padding-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.price-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold !important;
+}
+
+.ship {
+  border-top: 1px solid #686868;
+  padding-top: 24px;
+}
+
+.form-group {
+  margin-bottom: 0 !important;
+}
+
+.form-name {
+  font-weight: bold;
+}
+
+.order-item {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.beauty-checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.beauty-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 24px;
+  width: 24px;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.beauty-checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.beauty-checkbox input:checked ~ .checkmark {
+  background-color: #27ae60;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.beauty-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.beauty-checkbox .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 7px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.check-label {
+  padding-left: 32px;
 }
