--- a/web/static/css/orderManager.css
+++ b/web/static/css/orderManager.css
@@ -1,187 +1,198 @@
 /* Global styles */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
-    overflow-x: hidden;
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+  overflow-x: hidden;
 }
 
 header {
-    background-color: #02295c;
-    padding: 0px 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+  background-color: #02295c;
+  padding: 0px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo img {
-    margin-left: 30px;
-    width: 150px;
-    height: auto ;
-
+  margin-left: 30px;
+  width: 150px;
+  height: auto;
 }
 
 .login a {
-    background-color: #F7462E;
-    text-decoration: none;
-    padding: 9px 15px;
-    border: 1px solid white;
-    border-radius: 5px;
-    color: white;
-    margin-right: 50px;
+  background-color: #f7462e;
+  text-decoration: none;
+  padding: 9px 15px;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: white;
+  margin-right: 50px;
 }
 
 .login a:hover {
-    background-color: rgb(227, 93, 75);
-    color: white;
+  background-color: rgb(227, 93, 75);
+  color: white;
 }
 
 /* Sidebar styles */
 aside {
-    padding: 10px 5px;
+  padding: 10px 5px;
 }
 
-.admin{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.admin {
+  text-align: center;
+  color: white;
+  font-size: 16px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.admin img{
-    width: 150px;
-    margin-left: 20px;
+.admin img {
+  width: 150px;
+  margin-left: 20px;
 }
-.admin b{
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.col-md-2{
-    background-color: #02295c;
-    height: 100%;
-    padding-bottom: 175px;
+.admin b {
+  font-weight: bold;
+  font-size: 20px;
 }
 
-.col-md-10{
-    padding: 10px 40px;
+.col-md-2 {
+  background-color: #02295c;
+  height: 100%;
+  padding-bottom: 175px;
 }
 
-.nav-item span{
-    color: white;
-    font-size: 15px;
-    font-weight: bolder;
-    margin-left: 15px;
+.col-md-10 {
+  padding: 10px 40px;
 }
 
-.icon-integration:hover{
-    background-color: #F7462E;
+.nav-item span {
+  color: white;
+  font-size: 15px;
+  font-weight: bolder;
+  margin-left: 15px;
+}
+
+.icon-integration:hover {
+  background-color: #f7462e;
 }
 
 .icon-integration {
-    display: flex;
-    margin: 3px 15px; /* Điều chỉnh khoảng cách theo ý muốn */
+  display: flex;
+  margin: 3px 15px; /* Điều chỉnh khoảng cách theo ý muốn */
 }
 
 .icon {
-    display: inline-block;
-    padding: 8px; /* Điều chỉnh khoảng cách theo ý muốn */
+  display: inline-block;
+  padding: 8px; /* Điều chỉnh khoảng cách theo ý muốn */
 }
 
 .title {
-    display: inline-block;
-    margin-left: -30px; /* Điều chỉnh khoảng cách theo ý muốn */
+  display: inline-block;
+  margin-left: -30px; /* Điều chỉnh khoảng cách theo ý muốn */
 }
 
 .breadcrumb {
-    margin-top: 15px;
-    border: 2px solid gray;
-    padding: 10px ;
-    border-radius: 10px;
-    border-left: 10px solid #F7462E;
+  margin-top: 15px;
+  border: 2px solid gray;
+  padding: 10px;
+  border-radius: 10px;
+  border-left: 10px solid #f7462e;
 }
-.breadcrumb a{
-    text-decoration: none;
-    color: black;
+.breadcrumb a {
+  text-decoration: none;
+  color: black;
 }
 
-.breadcrumb a:hover{
-    color: #F7462E;
-}   
-
+.breadcrumb a:hover {
+  color: #f7462e;
+}
 
 /* Style the form container */
 .container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 /* Style the search form */
 .form-inline {
-    display: flex;
-    margin-left: 900px;
-    margin-bottom: 20px;
-    border: 2px solid gray;
-    border-radius: 10px;
-    padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 20px;
+  border: 2px solid gray;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.form-inline button {
+  height: 38px;
+  display: block;
+}
+
+.form-inline input {
+  width: 300px;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 /* Style the search input */
 .form-control {
-    flex: 1;
-    margin-right: 10px;
+  flex: 1;
+  margin-right: 10px;
 }
 
 /* Style the search button */
 .fa {
-    flex-basis: auto;
-    margin-left: 5px;
-    padding: 0px 10px;
-    border-radius: 10px;
-    background-color: #F7462E;
+  flex-basis: auto;
+  margin-left: 5px;
+  padding: 0px 10px;
+  border-radius: 10px;
+  background-color: #f7462e;
 }
 
 /* Style the table */
 table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .table th,
 .table td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
 }
 
 .table th {
-    background-color: rgb(203, 196, 196);
-    color: black;
-    text-align: center;
+  background-color: rgb(203, 196, 196);
+  color: black;
+  text-align: center;
 }
 
-.btn-group{
-    margin-left: 30px;
+.btn-group {
+  margin-left: 30px;
 }
-.btn{
-    padding: 7px 10px;
+.btn {
+  padding: 7px 10px;
 }
 
 .round-button {
-    display: inline-block;
-    width: 25px; /* Điều chỉnh kích thước theo mong muốn */
-    height: 25px; /* Điều chỉnh kích thước theo mong muốn */
-    background-color: red; /* Màu sắc nền */
-    border-radius: 50%; /* Để tạo hình tròn, đặt giá trị này là 50% */
-    text-align: center;
-    line-height: 25px; /* Đảm bảo nội dung nằm giữa ô tròn */
-    text-decoration: none; /* Loại bỏ đường gạch chân mặc định cho liên kết */
-    color: #fff; /* Màu sắc chữ */
+  display: inline-block;
+  width: 25px; /* Điều chỉnh kích thước theo mong muốn */
+  height: 25px; /* Điều chỉnh kích thước theo mong muốn */
+  background-color: red; /* Màu sắc nền */
+  border-radius: 50%; /* Để tạo hình tròn, đặt giá trị này là 50% */
+  text-align: center;
+  line-height: 25px; /* Đảm bảo nội dung nằm giữa ô tròn */
+  text-decoration: none; /* Loại bỏ đường gạch chân mặc định cho liên kết */
+  color: #fff; /* Màu sắc chữ */
 }
 .round-button:hover {
-    background-color: #cd201f;
+  background-color: #cd201f;
 }
 
 .round-button i {
-    font-size: 15px; /* Điều chỉnh kích thước của biểu tượng theo mong muốn */
+  font-size: 15px; /* Điều chỉnh kích thước của biểu tượng theo mong muốn */
 }
-
-
