--- a/web/static/css/compareCage.css
+++ b/web/static/css/compareCage.css
@@ -1,49 +1,70 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : Oct 28, 2023, 2:32:38 AM
-    Author     : QUANG HUY
-*/
-h2 {
+body{
+    background-color: #EEEEEE;
+    font-family: Arial, sans-serif;
+    margin: 2px;
+    height: 80vh;
+}    
+
+h2{
     text-align: center;
-    color: #333;
+    color: black;
     padding: 20px 0px;
 }
-
-/* Style for the product container */
-.container {
-    margin: 20px;
-}
-
-
-
 .col-md-5{
-    border: 1px solid gray;
     padding: auto;
     margin-left: 110px;
-    padding: 20px 20px;
+    padding: 10px 10px;
 
 }
+.info__Cage1, .info__Cage2{
+    background-color: white;
+    border: 1px solid #EEEEEE;  
+    padding: 40px 40px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    
+    
+}
 
-/* Style for the product details */
-.pro-img-details {
+.mate__Cage1, .mate__Cage2{
+    background-color: white;
+    border: 1px solid #EEEEEE;  
+    padding: 30px 30px;
+    margin: 10px;
+}
+
+.pro-img-details{
     text-align: center;
 }
-
-/* Style for the product title */
-.pro-d-title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
+.info__Cage1 .pro-img-details img{
+    height: 200px;
+}
+.info__Cage2 .pro-img-details img{
+    width: 100%;
+    height: 200px;
 }
 
-/* Style for the rating and price container */
+.pro-d-title{
+    text-align: center;
+    padding-top: 15px;
+}
+
+.detail-price{
+    text-align: center;
+}
+.detail__cage1 strong, 
+.detail__cage2 strong{
+    font-size: 18px;
+}
+.detail__cage1 span,
+.detail__cage2 span{
+    font-size: 16px;
+    font-weight: normal;
+}
+
 .rate-container {
     text-align: center;
-    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,47 +76,36 @@ h2 {
     color: gold;
 }
 
-/* Style for the product description */
-.detail-price {
+
+/*material*/
+.mate__Cage1 h4,
+.mate__Cage2 h4{
     text-align: center;
-}
-
-/* Style for the old and current prices */
-.amount-old {
-    text-decoration: line-through;
-    color: #888;
-}
-
-.pro-price {
-    font-size: 24px;
     font-weight: bold;
-    color: #333;
+}
+.mate__Cage1 hr,
+.mate__Cage2 hr{
+    width: 20%;
+    margin: 10px auto;
 }
 
-/* Style for the product description */
-p {
-    font-size: 16px;
-    color: #333;
+.mate__Cage1 .table,
+.mate__Cage2 .table{
+    width: 80%;
+    margin: 10px auto;
 }
-
-/* Style for the table */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid #333;
-    margin-top: 10px;
-}
-
-/* Style for table headers */
-th {
-    background-color: #333;
-    color: white;
+.mate__Cage1 .table th,
+.mate__Cage2 .table th{
     text-align: center;
-
+    background-color: #d3facd; 
 }
 
-/* Style for table cells */
-td {
-    padding: 5px;
+.btn__buy{
     text-align: center;
+    padding: 20px;
+}
+
+.btn__buy button{
+    border-radius: 20px;
+    padding: 10px 20px;
 }
