--- a/web/static/css/orderRequest.css
+++ b/web/static/css/orderRequest.css
@@ -1,7 +1,7 @@
 .main {
   background: white;
   font-family: "Arial", sans-serif;
-  padding: 50px;
+  padding: 200px 50px 50px 50px;
 }
 .title-main {
   text-align: center;
